qmltc: Wrap raw string literal in QStringLiteral

Without this, QT_NO_CAST_FROM_ASCII builds would fail.

Amends 361b601620073351013b516e9f7cf9f5173b9ce7

Pick-to: 6.8
Fixes: QTBUG-130081
Change-Id: Ifd5a4194a989953b7f0bc5f882b877eccb62cce8
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>